Версия менеджера задач Фин.задание 9 спринта. Добавлен новый функционал: Добавлен API